[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/GameCode/EnemyGravtiyBullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/VFX/VFX_asset/VFX_EnemyGunTrail_01.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/VFX/VFX_asset/VFX_gravityGunBulletSplash_01.tscn" type="PackedScene" id=3]

[sub_resource type="SphereShape" id=1]

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.180392, 0.607843, 0.690196, 1 )
emission_enabled = true
emission = Color( 0.0470588, 0.380392, 0.447059, 1 )
emission_energy = 4.29
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereShape" id=4]
radius = 0.767234

[node name="EnemyGravityBullet" type="KinematicBody"]
pause_mode = 1
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.694435, 0, 0, 0, 0.32742, 0, 0, 0, 0.411667, 0, 0, 0 )
shape = SubResource( 1 )
disabled = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.140217, 0, 0, 0, 0.0661112, 0, 0, 0, 0.083122, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="OmniLight" type="OmniLight" parent="MeshInstance"]
transform = Transform( 7.1318, 0, 0, 0, 15.126, 0, 0, 0, 12.0305, 0, 0, 0 )
light_color = Color( 0, 0.788235, 1, 1 )
light_energy = 2.0
shadow_enabled = true
omni_range = 7.0
omni_attenuation = 2.0

[node name="Area" type="Area" parent="."]
collision_layer = 17
collision_mask = 19

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 0.460186, 0, 0, 0, 0.639723, 0, 0, 0 )
shape = SubResource( 4 )

[node name="VFX_EnemyGunTrail" parent="." instance=ExtResource( 2 )]

[node name="VFX_gravityGunBulletSplash" parent="." instance=ExtResource( 3 )]

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 324.536, 0, 0, 0, 243.374, 0, 0, 0, 1, 0, 0, 0 )

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 0.7

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
